added font-awesome + initial screen

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,24 @@
-<ul>
-{{#each}}
-  <li>{{this}}</li>
-{{/each}}
-</ul>
+<nav class="main-menu">
+  <div class="row">
+    <div class="small-4 columns text-center">
+      <i class="fa fa-group fa-5x"></i><br/>Item 1
+    </div>
+    <div class="small-4 columns text-center">
+      <i class="fa fa-group fa-5x"></i><br/>Item 2
+    </div>
+    <div class="small-4 columns text-center">
+      <i class="fa fa-group fa-5x"></i><br/>Item 3
+    </div>
+  </div>
+  <div class="row">
+    <div class="small-4 columns text-center">
+      <i class="fa fa-group fa-5x"></i><br/>Item 1
+    </div>
+    <div class="small-4 columns text-center">
+      <i class="fa fa-group fa-5x"></i><br/>Item 2
+    </div>
+    <div class="small-4 columns text-center">
+      <i class="fa fa-group fa-5x"></i><br/>Item 3
+    </div>
+  </div>
+</nav>
