--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<header class="main-title">
+  <div class="row">
+    <h1 id='logo'>OpenTalent</h1>
+  </div>
+</header>
 
+<main>
 {{outlet}}
+</main>
