added new routes, logo

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <header class="main-title">
   <div class="row">
-    <h1 id='logo'>OpenTalent</h1>
+    {{#link-to 'index'}}<h1 id='logo'><img src="assets/openTalentLogo.png"/></h1>{{/link-to}}
   </div>
 </header>
 
