--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,24 +1,72 @@
 <nav class="main-menu">
   <div class="row">
-    <div class="small-4 columns text-center">
-      <i class="fa fa-group fa-5x"></i><br/>Item 1
-    </div>
-    <div class="small-4 columns text-center">
-      <i class="fa fa-group fa-5x"></i><br/>Item 2
-    </div>
-    <div class="small-4 columns text-center">
-      <i class="fa fa-group fa-5x"></i><br/>Item 3
-    </div>
+    {{#link-to 'staff'}}
+      <div class="small-3 columns text-center">
+        <div class="card">
+          <i class="fa fa-group fa-5x card-image"></i>
+
+          <div class="card-label">
+            <h5>Staff</h5>
+          </div>
+        </div>
+      </div>
+    {{/link-to}}
+    {{#link-to 'staff.new'}}
+      <div class="small-3 small-offset-1 columns text-center">
+        <div class="card">
+          <i class="fa fa-group fa-5x card-image"></i>
+
+          <div class="card-label">
+            <h5>New Profile</h5>
+          </div>
+        </div>
+      </div>
+    {{/link-to}}
+    {{#link-to 'staff.new'}}
+      <div class="small-3 small-offset-1 columns text-center">
+        <div class="card">
+          <i class="fa fa-group fa-5x card-image"></i>
+
+          <div class="card-label">
+            <h5>New Profile</h5>
+          </div>
+        </div>
+      </div>
+    {{/link-to}}
   </div>
   <div class="row">
-    <div class="small-4 columns text-center">
-      <i class="fa fa-group fa-5x"></i><br/>Item 1
-    </div>
-    <div class="small-4 columns text-center">
-      <i class="fa fa-group fa-5x"></i><br/>Item 2
-    </div>
-    <div class="small-4 columns text-center">
-      <i class="fa fa-group fa-5x"></i><br/>Item 3
-    </div>
+    {{#link-to 'staff'}}
+      <div class="small-3 columns text-center">
+        <div class="card">
+          <i class="fa fa-group fa-5x card-image"></i>
+
+          <div class="card-label">
+            <h5>Item Name</h5>
+          </div>
+        </div>
+      </div>
+    {{/link-to}}
+    {{#link-to 'staff.new'}}
+      <div class="small-3 small-offset-1 columns text-center">
+        <div class="card">
+          <i class="fa fa-group fa-5x card-image"></i>
+
+          <div class="card-label">
+            <h5>New Profile</h5>
+          </div>
+        </div>
+      </div>
+    {{/link-to}}
+    {{#link-to 'staff.new'}}
+      <div class="small-3 small-offset-1 columns text-center">
+        <div class="card">
+          <i class="fa fa-group fa-5x card-image"></i>
+
+          <div class="card-label">
+            <h5>New Profile</h5>
+          </div>
+        </div>
+      </div>
+    {{/link-to}}
   </div>
 </nav>
