added mixing for tab views

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,7 +11,7 @@
         </div>
       </div>
     {{/link-to}}
-    {{#link-to 'staff.new'}}
+    {{#link-to 'staff.create'}}
       <div class="small-3 small-offset-1 columns text-center">
         <div class="card">
           <i class="fa fa-group fa-5x card-image"></i>
@@ -22,7 +22,7 @@
         </div>
       </div>
     {{/link-to}}
-    {{#link-to 'staff.new'}}
+    {{#link-to 'staff.create'}}
       <div class="small-3 small-offset-1 columns text-center">
         <div class="card">
           <i class="fa fa-group fa-5x card-image"></i>
@@ -46,7 +46,7 @@
         </div>
       </div>
     {{/link-to}}
-    {{#link-to 'staff.new'}}
+    {{#link-to 'staff.create'}}
       <div class="small-3 small-offset-1 columns text-center">
         <div class="card">
           <i class="fa fa-group fa-5x card-image"></i>
@@ -57,7 +57,7 @@
         </div>
       </div>
     {{/link-to}}
-    {{#link-to 'staff.new'}}
+    {{#link-to 'staff.create'}}
       <div class="small-3 small-offset-1 columns text-center">
         <div class="card">
           <i class="fa fa-group fa-5x card-image"></i>
