added center div

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,5 +5,9 @@
 </header>
 
 <main>
-{{outlet}}
+  <div class="main">
+    <div class="main-centered">
+      {{outlet}}
+    </div>
+  </div>
 </main>
