--- a/app/templates/staff/create.hbs
+++ b/app/templates/staff/create.hbs
@@ -1,11 +1,11 @@
-<div class="content">
+<div class="">
   <dl class="tabs" data-tab>
     <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
     <dd><a href="#panel2-2">Tab 2</a></dd>
     <dd><a href="#panel2-3">Tab 3</a></dd>
     <dd><a href="#panel2-4">Tab 4</a></dd>
   </dl>
-  <div class="tabs-content">
+  <div class="tabs-content main-content">
     <div class="content active" id="panel2-1">
       <p>First panel content goes here...</p>
     </div>
